--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     container_name: predict_service
     ports:
       - "9696:9696"
+    volumes:
+      - gunicorn_data:/var/lib/gunicorn
   
   streamlit:
     build:
@@ -16,3 +18,6 @@ services:
       - "8501:8501"
     depends_on:
       - predict_service
+
+volumes:
+  gunicorn_data:
